--- a/amor.html
+++ b/amor.html
@@ -77,9 +77,8 @@
             }
 
             50% {
-                text-shadow: 0 0 40px rgba(236, 72, 153, 0.8),
-                    0 0 80px rgba(236, 72, 153, 0.5),
-                    0 0 120px rgba(236, 72, 153, 0.3);
+                text-shadow: 0 0 20px rgba(236, 72, 153, 0.8),
+                    0 0 40px rgba(236, 72, 153, 0.5);
             }
         }
 
@@ -144,7 +143,7 @@
     <div class="relative z-10 text-center px-6 fade-in">
         <!-- Card principal -->
         <div
-            class="bg-gradient-to-b from-blue-900/50 to-slate-800/50 backdrop-blur-lg rounded-3xl p-8 md:p-12 shadow-2xl border border-pink-500/30 max-w-md mx-auto">
+            class="bg-gradient-to-b from-blue-900/80 to-slate-800/80 backdrop-blur-sm rounded-3xl p-8 md:p-12 shadow-xl border border-pink-500/30 max-w-md mx-auto">
             <!-- Imagem -->
             <div class="floating mb-8">
                 <img src="resposta.jpeg" alt="Te amo meu bem!"
@@ -195,7 +194,7 @@
             // Remover após a animação
             setTimeout(() => {
                 heart.remove();
-            }, 8000);
+            }, 6000);
         }
 
         // Criar corações iniciais
@@ -204,7 +203,7 @@
         }
 
         // Continuar criando corações
-        setInterval(createHeart, 800);
+        setInterval(createHeart, 2000);
     </script>
 </body>
 
